# aerl

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
Documentation/: Device Bring-Up.md  Meta.md
Documentation/Components/: Boundary.md  CNSMR.md  Debian Package Repository.md  Help Docs.md  Managed Grafana.md  Mimir.md  SendGrid.md
Documentation/Design/: Customer VPN Tailscale Integration.md  Security.md
Documentation/Operations/: Alerting.md  Compiling U-Boot.md  Compiling the Linux Kernel.md  Custom Supabase Roles.md  Debugging the Hub.md  Deployment Management.md  Manual Hub Bring-up.md  Performing Supabase DB Migrations.md  Restart Failures.md  Service Level Agreement.md  Service Level Objectives.md  Standard Environment Variables.md  Supabase Configuration.md
boundary/: .dockerignore  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
boundary/src/: args.rs  auth.rs  canbus.rs  main.rs  metrics.rs  mimir.rs  modbus.proto  modbus.rs  prometheus.rs
boundary/src/device/v1/: heartbeat.rs  mod.rs  token.rs
cloudflare/: .gitignore  README.md  app.tf  main.tf  meta.tf  services.tf
cnsmr/: .env.local  Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
cnsmr/dbc/: earthguard.dbc  pylon.dbc  srx.dbc
cnsmr/src/: args.rs  canbus.rs  devices.rs  main.rs  metrics.rs  modbus.cet_converter_system.json  modbus.schema.json  serial_store.rs  supabase.rs
cnsmr/src/prometheus/: mod.rs  types.proto
docs/: .gitignore  README.md  package.json  pnpm-lock.yaml  theme.config.jsx
docs/components/: contact-support.tsx  electrical-warning-callout.tsx  index.tsx
docs/pages/: _error.tsx  _meta.json  index.mdx  support.mdx
grafana/: fly.toml
hubd/: .gitignore  Cargo.toml  README.md  SETUP.md  build.rs
hubd/assets/: default_environment
hubd/debian/: postinst  service
hubd/src/: args.rs  auth.rs  heartbeat.rs  main.rs  state.rs  web.rs
hubd/src/canbus/: bootload.rs  canbus.proto  identifier.rs  mod.rs
hubd/src/db/remote/: mod.rs  models.rs  schema.rs
hubd/src/modbus/: device.rs  interface.rs  interface.schema.json  mod.rs  modbus.srx.json  product.rs  product.schema.json
hubd/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
hubd/web/src/: main.tsx  router.tsx
hubd/web/src/components/: icons.tsx  setup_layout.tsx
hubd/web/src/pages/: index.tsx
hubd/web/src/pages/setup/: ethernet.tsx  index.tsx
hubd/web/src/pages/setup/wifi/: connect.tsx  scan.tsx
log-shipper/: README.md  fly.toml
mimir/: config.yaml  fly.toml  local.yaml
mimir/continuous-test/: fly.toml
mimir/loadtest/: README.md  load-testing-with-k6.js  loadtest.sh
nats/: Dockerfile  fly.toml  go.mod  go.sum
nats/iac/: .gitignore
pkgs/: README.md  Release.noarmor.gpg  apt-key.gpg  upload.sh
supabase/: .env.local  .gitignore  Dockerfile  README.md  config.toml  docker-compose.yaml  fly.toml  gen-types.sh  seed.sql
supabase/metrics-proxy/: Dockerfile  README.md  fly.toml  nginx.conf.template
supabase/migrations/: 20230911054055_remote_schema.sql  20230913021948_hub_metadata.sql  20231016032121_rename_pin_to_password.sql  (+3 more)
web/: Dockerfile  README.md  fly.toml  next.config.js  package-lock.json  package.json  server.js  tsconfig.json
(+165 files in other folders)
