[package]
name = "boundary"
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-nats = "0.33.0"
axum = "0.7.1"
axum-macros = "0.4.0"
axum-prometheus = "0.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
futures-util = "0.3.28"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
log = "0.4.17"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
moka = { version = "0.12.1", features = ["future"] }
postgrest = "1.6.0"
prost = "0.12.0"
prost-types = "0.12.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
tokio = { version = "1.28.1", features = ["macros", "sync", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
prost-build = "0.12.0"
