[package]
name = "hubd"
version = "0.1.2"
edition = "2021"
authors = ["AERL Pty. Ltd."]
license = "none"
readme = false

[features]
default = ["canbus"]
canbus = ["dep:socketcan"]

[dependencies]
env_logger = "0.10.0"
futures = "0.3"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
socketcan = { version = "2.0.0", default-features = false, optional = true }
tokio = { version = "1.0", features = ["full"] }
prost-types = "0.12.0"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
lazy_static = "1.4.0"
pnet_datalink = "0.34.0"
prost = "0.12.0"
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "env"] }
rand = "0.8.5"
tokio-modbus = "0.9.0"
typify = "0.0.14"
postgrest = "1.6.0"
tokio-serial = "5.4.4"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
axum = "0.7.2"
rust-embed = "8.0.0"
mime_guess = "2.0.4"

[build-dependencies]
anyhow = "1.0.71"
prost-build = "0.12.0"
protobuf-src = "1.1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true

[package.metadata.deb]
maintainer = "AERL developers <info@aerl.com.au>"
copyright = "AERL Pty. Ltd. © 2023"
section = "utils"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = true }
assets = [
    ["target/release/hubd", "usr/bin/hubd", "755"],
    ["assets/default_environment", "/etc/default/hubd", "644"],
]
